# speech2text

./: Cargo.toml  shell.nix
src/: main.rs
